# index-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.production  README.md  config.example.toml  docker-compose.yml  todo.md
docker/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: index.js  websocket.js
frontend/src/components/common/: Card.jsx  Loading.jsx  ThemeToggle.jsx
frontend/src/components/layout/: MainLayout.jsx  Sidebar.jsx
frontend/src/components/widgets/: CpuWidget.jsx  DiskWidget.jsx  DockerWidget.jsx  FileManager.jsx  GpuWidget.jsx  MemoryWidget.jsx  NetworkWidget.jsx  PortWidget.jsx  ProcessWidget.jsx  ServiceWidget.jsx  SystemInfo.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  DockerPage.jsx  FilesPage.jsx  NotFound.jsx  PortsPage.jsx  ProcessesPage.jsx  ServicesPage.jsx
frontend/src/store/: serverStore.js
frontend/src/utils/: echarts.js  helpers.js  logger.js
src/: collector_config.rs  collector_utils.rs  collectors.rs  config.rs  docker_parser.rs  file_handlers.rs  handlers.rs  health.rs  main.rs  models.rs
static/: app.js  index.html  style.css
systemd/: README.md  index-rs.service
